# firebird-mcp

./: README.md  build.sh  firebird-mcp.py  firebird-mcp.spec  pyproject.toml
