[project]
name = "firebirdmcp"
version = "0.1.0"
description = "MCP server for Firebird database"
readme = "README.md"
authors = [
    { name = "Ricardo S. Demeterko", email = "mail@ninodeme.com" }
]
requires-python = ">=3.11"
dependencies = [
    "firebird-driver>=2.0.2",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
